@@ -1,3 +1,5 @@
+* Check price_decimal configuration
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Add round_price
